// Protoconf - Tableau's data interchange format
// https://tableauio.github.io/

syntax = "proto3";

package tableau;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/tableauio/tableau/proto/tableaupb";
option java_package = "com.tableau.protobuf";
option java_outer_classname = "TableauProto";
option java_multiple_files = true;
option objc_class_prefix = "TPB";
option csharp_namespace = "Tableau.Protobuf.Tableau";

// Option field numbers must be in the range 50000-99999. This range
// is reserved for internal use within individual organizations.

extend google.protobuf.FileOptions {
  WorkbookOptions workbook = 50000;
}

extend google.protobuf.MessageOptions {
  WorksheetOptions worksheet = 50000;
  StructOptions struct = 50001;
  UnionOptions union = 50002;
}

extend google.protobuf.FieldOptions {
  FieldOptions field = 50000;
}

extend google.protobuf.EnumOptions {
  EnumOptions etype = 50000;
}

extend google.protobuf.EnumValueOptions {
  EnumValueOptions evalue = 50000;
}

extend google.protobuf.OneofOptions {
  optional OneofOptions oneof = 50000;
}

message EnumOptions {
  string name = 1;  // Worksheet name.
  string note = 2;  // Enum type note. Maybe in another language (Chinese).
}

message EnumValueOptions {
  string name = 1;  // Enum value alias.
  string note = 2;  // Enum value note. Maybe in another language (Chinese).
}

message StructOptions {
  string name = 1;  // Worksheet name.
  string note = 2;  // Struct type note. Maybe in another language (Chinese).
}

message UnionOptions {
  string name = 1;  // Worksheet name.
  string note = 2;  // Oneof note, maybe in another language (Chinese).
}

message OneofOptions {
  string name = 1;   // Oneof alias. NOT USED yet.
  string note = 2;   // Oneof note, maybe in another language (Chinese).
  string field = 3;  // Field name.
}

message WorkbookOptions {
  // filename with path, e.g.: "relative/path/BookName.suffix" (slash path)
  string name = 1;   
  // book alias without suffix, e.g.: "BookAlias"
  string alias = 2;  
  // Exact row number of column name definition at a worksheet.
  //
  // Default: 1.
  int32 namerow = 3;
  // Exact row number of column type definition at a worksheet.
  //
  // Default: 2.
  int32 typerow = 4;
  // Exact row number of column note definition at a worksheet.
  //
  // Default: 3.
  int32 noterow = 5;
  // Start row number of data at a worksheet.
  //
  // Default: 4.
  int32 datarow = 6;
  // The line number of column name definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 nameline = 7;
  // The line number of column type definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 typeline = 8;
  // The line number of column note definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 noteline = 9;
  // Sheet-level separator for separating:
  //  - incell list elements (scalar or struct).
  //  - incell map items.
  //
  // If set, it will overwrite global-level seq in options.ConfInputOption.Sep.
  string sep = 10;
  // Sheet-level subseparator for separating:
  //  - key-value pair of each incell map item.
  //  - struct fields of each incell struct list element.
  //
  // If set, it will overwrite global-level subseq in options.ConfInputOption.Subsep.
  string subsep = 11;
}

message WorksheetOptions {
  // Worksheet name
  string name = 1;
  // Exact row number of column name definition at a worksheet.
  //
  // Default: 1.
  int32 namerow = 2;
  // Exact row number of column type definition at a worksheet.
  //
  // Default: 2.
  int32 typerow = 3;
  // Exact row number of column note definition at a worksheet.
  //
  // Default: 3.
  int32 noterow = 4;
  // Start row number of data at a worksheet.
  //
  // Default: 4.
  int32 datarow = 5;
  // The line number of column name definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 nameline = 6;
  // The line number of column type definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 typeline = 7;
  // The line number of column note definition in a cell. 0 means
  // the whole cell.
  //
  // Default: 0.
  int32 noteline = 8;
  // Sheet-level separator for separating:
  //  - incell list elements (scalar or struct).
  //  - incell map items.
  //
  // If set, it will overwrite global-level seq in options.ConfInputOption.Sep.
  string sep = 9;
  // Sheet-level subseparator for separating:
  //  - key-value pair of each incell map item.
  //  - struct fields of each incell struct list element.
  //
  // If set, it will overwrite global-level subseq in options.ConfInputOption.Subsep.
  string subsep = 10;
  // Nested naming of the namerow.
  bool nested = 11;
  // Interchange the rows and columns of worksheet.
  bool transpose = 12;
  // Labels are key/value pairs that are attached to sheet.
  // Labels can be used to organize and to select subsets of sheets.
  // For example:
  //  - "app:gamesvr,patch:merge" indicates app is gamesvr and patch is true.
  //  - "app:*" indicates all apps.
  //
  // This concept is much like it is in k8s, see
  // https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/.
  map<string, string> labels = 13;
  // Merger merge multiple workbook sheets (comma-separated) into one
  // with same schema. E.g.: Item1.xlsx,Item2.xlsx,ItemAward*.xlsx.
  repeated string merger = 14;
  // Merge adjacent rows with the same key. If the key cell is not set,
  // it will be treated the same as the nearest key above the same column.
  bool adjacent_key = 15;
  // In order to track field presence of basic types (numeric, string, bytes,
  // and enums), the generated field will be labeled "optional".
  //
  // See https://protobuf.dev/programming-guides/field_presence/
  bool field_presence = 16;
  // Indicate this XML sheet is a template or not. Template sheet structure will
  // only be parsed based on metasheet "@TABLEAU" in comments.
  bool template = 17;
  // Sheet mode.
  Mode mode = 18;
  // Scatter convert multiple workbook sheets (comma-separated) separately
  // with same schema. E.g.: Item1.xlsx,Item2.xlsx,ItemAward*.xlsx.
  repeated string scatter = 19;
  // Whether all fields in this sheet are optional (field name existence).
  // If set to true, then:
  //  - table formats (Excel/CSV): field's column can be absent.
  //  - document formats (XML/YAML): field's name can be absent.
  bool optional = 20;
  // Sheet patch type.
  Patch patch = 21;
  // confgen: export JSON/Bin/Text files with parent dir created.
  bool with_parent_dir = 22;
  // confgen(scatter): export JSON/Bin/Text filenames without book name prefix.
  bool scatter_without_book_name = 23;

  ////////// Loader related options below //////////
  // Generate OrderedMap accessers or not.
  bool ordered_map = 50;
  // Generate index accessers, and multiple index columns are comma-separated.
  // Format: <ColumnName>[@IndexName], if IndexName is not set, it will be this
  // columnâ€™s parent struct type name.
  //
  // Composite indexes (or multicolumn indexes) are in the form:
  // ([column1, column2, column3,...])[@IndexName]
  //
  // Examples:
  //  - ID
  //  - ID@Item
  //  - (ID,Type)
  //  - (ID,Type)@Item
  //  - ID, (ID,Type)@Item
  repeated string index = 51;

  // Specify loader language options.
  // Valid keys are: OrderedMap, Index.
  // Different kvs must be seperated by ',' and one key value must be seperated
  // by ':'. If one key doesn't exist in map, it means that this loader option
  // is supported in all languages. Valid values are all combinations of "cpp",
  // "go" with ' ' as seperator.
  //
  // Examples:
  //  - OrderedMap:cpp,Index:cpp go // ordered map supported in cpp, index
  //    supported in cpp and go
  //  - OrderedMap:cpp // ordered map supported in cpp, index supported in all
  //    languages
  map<string, string> lang_options = 52;
}

message FieldOptions {
  string name = 1;    // Scalar type's variable name or composite type's variable name (prefix).
  string note = 2;    // Field note. Maybe in another language (Chinese).
  string key = 3;     // Only set when this field type is map or keyed-list.
  Layout layout = 4;  // For map/list types with cardinality. Default: LAYOUT_DEFAULT.
  Span span = 5;      // For list element or map value types. Default: SPAN_CROSS_CELL.

  FieldProp prop = 15;  // Property of field.
}

message FieldProp {
  // Usage: {range:"1,10" refer:"Item.ID"}

  // Different interpretations of range:
  //   - number: value range
  //   - string: count of utf-8 code point
  //
  // Format: "1,10", "1,~", "~,10".
  string range = 1;
  // Whether the map key is unique in column.
  // If not set, then auto deduce whether the map key is unique or not.
  optional bool unique = 2;
  // Ensure this field's value is in another sheet's
  // column value space (aka message's field value space).
  //
  // Format: "SheetName.ColumnName" or "SheetName(SheetAlias).ColumnName"
  //
  // Example:
  //  - "SheetName.ColumnName": e.g. "Item.ID", without sheet alias, and
  //    the sheet name is the generated protobuf message name.
  //  - "SheetName(SheetAlias).ColumnName": e.g. "Item(ItemConf).ID", with
  //    sheet alias, and sheet alias is the generated protobuf message name.
  string refer = 3;
  // Ensure this field's value is a sequence and begins with this value.
  // Mainly used for map key and list element.
  optional int64 sequence = 4;
  // Specify custom default value of scalar field.
  string default = 5;
  // Auto detect fixed size of horizontal list or map.
  //  - list size is detected by size of the max present list elements in name row.
  //  - map size is detected by size of the max present map items in name row.
  bool fixed = 6;
  // Specify fixed size of horizontal list or map.
  uint32 size = 7;
  // Specify cell data form for parsing.
  Form form = 8;
  // JSON name of this field. The value is set by protocol compiler. If the
  // user has set a "json_name" option on this field, that option's value
  // will be used. Otherwise, it's deduced from the field's name by converting
  // it to camelCase.
  string json_name = 9;
  // Whether this field value is present (field value existence).
  // If set to true, then do the following checks for different field types:
  //  - scalar/enum: cell data cannot be empty string (TODO: If this field's
  //    type is string, then how to set empty string explicitly?)
  //  - struct: check at least one field is present recursively
  //  - map/list: len(elements) > 0
  bool present = 10;
  // Whether this field is optional (field name existence).
  // If set to true, then:
  //  - table formats (Excel/CSV): field's column can be absent.
  //  - document formats (XML/YAML): field's name can be absent.
  bool optional = 11;
  // Field patch type.
  Patch patch = 12;
  // Field-level separator for separating:
  //  - incell list elements (scalar or struct).
  //  - incell map items.
  //
  // If set, it will overwrite sheet-level seq in WorksheetOptions.
  string sep = 13;
  // Field-level subseparator for separating:
  //  - key-value pair of each incell map item.
  //  - struct fields of each incell struct list element.
  //
  // If set, it will overwrite sheet-level subseq in WorksheetOptions.
  string subsep = 14;
  // Specify count of crossed nodes/cells/fields of composite types with
  // cardinality, such as list and map.
  //
  // For union list field:
  //
  //    Specify the count of union fields the list will cross and occupy
  //    (one list element for each field). It will also change this list
  //    field's layout from incell to horizontal.
  //
  //    - Value 0 means it is an incell list.
  //    - Value > 0 means it is a horizontal list occupying N fields.
  //    - Value < 0 means it is a horizontal list occupying all following fields.
  //
  // TODO: use cases for more composite types.
  int32 cross = 15;
}

// Layout of list and map.
enum Layout {
  // Default:
  //  - vertical for struct map
  //  - incell for scalar map
  //  - horizontal for struct list
  //  - incell for scalar list
  LAYOUT_DEFAULT = 0;
  LAYOUT_VERTICAL = 1;    // Vertical
  LAYOUT_HORIZONTAL = 2;  // Horizontal
  LAYOUT_INCELL = 3;      // Incell
}

// Field data span of scalar and struct.
enum Span {
  // Default:
  //  - inner cell for scalar type: bool, string, bytes, number, and enum.
  //  - cross cell for struct type: map-value, list-element, and struct-field.
  SPAN_DEFAULT = 0;
  SPAN_CROSS_CELL = 1;  // The field data spans across multiple cells.
  SPAN_INNER_CELL = 2;  // The field data spans inside one cell.
}

// Sheet mode.
enum Mode {
  MODE_DEFAULT = 0;            // Default mode.
  MODE_ENUM_TYPE = 1;          // Enum type: single definition in a sheet.
  MODE_ENUM_TYPE_MULTI = 2;    // Enum type: multiple definitions in a sheet.
  MODE_STRUCT_TYPE = 3;        // Struct type: single definition in a sheet.
  MODE_STRUCT_TYPE_MULTI = 4;  // Struct type: multiple definitions in a sheet.
  MODE_UNION_TYPE = 5;         // Union type: single definition in a sheet.
  MODE_UNION_TYPE_MULTI = 6;   // Union type: multiple definitions in a sheet.

  // UE DataTable references:
  //  - https://dev.epicgames.com/documentation/en-us/unreal-engine/data-driven-gameplay-elements-in-unreal-engine
  //  - https://dev.epicgames.com/documentation/en-us/unreal-engine/BlueprintAPI/EditorScripting/DataTable
  MODE_UE_CSV = 10;   // TODO: CSV format of UE DataTable.
  MODE_UE_JSON = 11;  // TODO: JSON format of UE DataTable.
}

// Cell data form.
enum Form {
  FORM_DEFAULT = 0;  // Default form which confgen parser will parse.
  FORM_TEXT = 1;     // Refer: https://developers.google.com/protocol-buffers/docs/text-format-spec
  FORM_JSON = 2;     // Refer: https://developers.google.com/protocol-buffers/docs/proto3#json
}

// Patch type for both sheet-level and field-level.
enum Patch {
  PATCH_NONE = 0;
  // 1 Sheet-level patch option "PATCH_REPLACE"
  //   - replace whole message
  // 2 Top-field patch option "PATCH_REPLACE"
  //   - list: Clear field firstly, and then all elements of this list field
  //     in src are appended to the corresponded list fields in dst.
  //   - map: Clear field firstly, and then all entries of this map field in src
  //     are copied into the corresponding map field in dst.
  PATCH_REPLACE = 1;
  // Merge src into dst, which must be a message with the same descriptor.
  //  - scalar: Populated scalar fields in src are copied to dst.
  //  - message: Populated singular messages in src are merged into dst by
  //     recursively calling [proto.Merge](https://pkg.go.dev/google.golang.org/protobuf/proto#Merge).
  //  - list: The elements of every list field in src are appended to the
  //     corresponded list fields in dst.
  //  - map: The entries of every map field in src are copied into the
  //     corresponding map field in dst, possibly replacing existing entries.
  //  - unknown: The unknown fields of src are appended to the unknown
  //     fields of dst.
  PATCH_MERGE = 2;
}
